added multicolumns grid

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <div class="site">
 
-      <header>
+      <header class="masthead">
         <div class="logo">
         G
         </div>
@@ -20,12 +20,14 @@
       </header>
 
 
+              <figure class="feature">
+                <img src="wing.jpg" alt="Laptop">
+              </figure>
 
-      <main>
 
-        <figure class="feature">
-          <img src="wing.jpg" alt="Laptop">
-        </figure>
+
+      <main id="content" class="main-area">
+
 
         <section class="splash">
           <div class="splash-content">
@@ -52,7 +54,6 @@
 
 <div class="bucket">
   <h2>Hello</h2>
-
 </div>
     </li>
   </ul>
